--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="/index.js" type="module" defer></script>
+    <link rel="stylesheet" href="public/css/style.css">
   </head>
   <body>
     <div id="root" data-baseurl=""></div>
